<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="dd/"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/monthTextView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="MM/"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="yyyy"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot2"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot3"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot4"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot5"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot6"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/slot1TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/slot2TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/slot3TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/slot4TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/slot5TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/slot6TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slot6"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>